--- a/SiaSkynet/SiaSkynet.csproj
+++ b/SiaSkynet/SiaSkynet.csproj
@@ -20,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediaTypeMap.Core" Version="2.3.3" />
     <PackageReference Include="RestEase" Version="1.4.12" />
   </ItemGroup>
 
