--- a/SiaSkynet/SiaSkynet.csproj
+++ b/SiaSkynet/SiaSkynet.csproj
@@ -19,8 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ed25519" Version="1.0.0" />
-    <PackageReference Include="dotnetstandard-bip32" Version="1.0.0" />
+    <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
     <PackageReference Include="Isopoh.Cryptography.Blake2b" Version="1.1.9" />
     <PackageReference Include="MediaTypeMap.Core" Version="2.3.3" />
     <PackageReference Include="RestEase" Version="1.4.12" />
