Removed build step

--- a/.github/workflows/skynet_publish.yml
+++ b/.github/workflows/skynet_publish.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   publish:
-    name: build, pack & publish
+    name: build and publish to skynet
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,8 +12,6 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.x
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
       - name: Publish Website
         run: dotnet publish SiaSkynet.Sample.Blazor -o publish/SiaSkynet.Sample.Blazor -c Release
       - name: Deploy to Skynet
