--- a/SiaSkynet.Sample.Blazor/SiaSkynet.Sample.Blazor.csproj
+++ b/SiaSkynet.Sample.Blazor/SiaSkynet.Sample.Blazor.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SiaSkyNet\SiaSkynet.csproj" />
+    <ProjectReference Include="..\SiaSkynet\SiaSkynet.csproj" />
   </ItemGroup>
 
 </Project>
