--- a/SiaSkynet.Tests/SiaSkynet.Tests.csproj
+++ b/SiaSkynet.Tests/SiaSkynet.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SiaSkyNet\SiaSkynet.csproj" />
+    <ProjectReference Include="..\SiaSkynet\SiaSkynet.csproj" />
   </ItemGroup>
 
   <ItemGroup>
