Optional force revision number for SkyDB

--- a/SiaSkynet/SiaSkynet.csproj
+++ b/SiaSkynet/SiaSkynet.csproj
@@ -9,7 +9,7 @@
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Authors>Michiel Post</Authors>
-    <Version>3.2.0-beta01</Version>
+    <Version>3.3.0</Version>
     <Product>Sia Skynet Client</Product>
     <PackageProjectUrl>https://github.com/michielpost/SiaSkynet</PackageProjectUrl>
     <RepositoryUrl>https://github.com/michielpost/SiaSkynet</RepositoryUrl>
