--- a/.github/workflows/nuget_publish.yml
+++ b/.github/workflows/nuget_publish.yml
@@ -1,51 +1,26 @@
-name: publish to nuget
+name: Push NuGet packages
+
 on:
   push:
     branches:
       - master # Default release branch
+
 jobs:
   publish:
-    name: build, pack & publish
+
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.x
-
-      # Publish
-      - name: publish on version change
-        id: publish_nuget
-        uses: brandedoutcast/publish-nuget@v2
-        with:
-          # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: SiaSkynet/SiaSkynet.csproj
-          
-          # NuGet package id, used for version detection & defaults to project name
-          # PACKAGE_NAME: Core
-          
-          # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          # VERSION_FILE_PATH: Directory.Build.props
-
-          # Regex pattern to extract version info in a capturing group
-          # VERSION_REGEX: <Version>(.*)<\/Version>
-          
-          # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-          # VERSION_STATIC: 1.0.0
-
-          # Flag to toggle git tagging, enabled by default
-          # TAG_COMMIT: true
-
-          # Format of the git tag, [*] gets replaced with actual version
-          # TAG_FORMAT: v*
-
-          # API key to authenticate with NuGet server
-          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
-
-          # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-          # NUGET_SOURCE: https://api.nuget.org
-
-          # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-          # INCLUDE_SYMBOLS: false
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+    - name: Build with dotnet
+      run: dotnet build SiaSkynet/SiaSkynet.csproj --configuration Release
+    - name: Package NuGet
+      run: dotnet pack SiaSkynet/SiaSkynet.csproj -c Release -o out -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+    - name: Publish packages to nuget.org
+      run: dotnet nuget push ./out/**/*.* -s https://api.nuget.org/v3/index.json -k ${NUGET_TOKEN} --skip-duplicate
+      env:
+        NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }} 
